[build-system]
build-backend = "setuptools.build_meta"
requires = ['setuptools >= 61.0', 'versioneer[toml]']

[project]
name = "loris"
description = """\
This repository provides a set of core functions for several \
Local Resource Integration Systems of ISC Konstanz e.V."""

authors = [
    {name = "ISC Konstanz e.V."}
]
maintainers = [
    {name = "Adrian Minde", email = "adrian.minde@isc-konstanz.de"}
]

urls.author = "https://isc-konstanz.de"
urls.source = "https://github.com/isc-konstanz/loris/"
urls.issues = "https://github.com/isc-konstanz/loris/issues"

classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

readme = "README.md"
requires-python = ">= 3.9"
license.file = "LICENSE"
dynamic = ["version"]

dependencies = [
    "tomli >= 1.1.0; python_version < '3.11'",
    "numpy >= 1.16",
    "pandas >= 0.23",
    "pytz >= 2019.1",
    "requests"
]

[project.optional-dependencies]
mysql = [
    "mysql-connector-python"
]
dev = [
    "loris[mysql]",
    "isort",
    "black",
    "autoflake",
    "pre-commit",
    "pytest"
]

[tool.setuptools.package-data]
loris = []

[tool.setuptools.packages.find]
namespaces = false
exclude = [
    "doc",
    "data*"
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "loris/_version.py"
versionfile_build = "loris/_version.py"
parentdir_prefix = "loris-"
tag_prefix = "v"

[project.scripts]
loris = "loris.__main__:main"

[tool.autoflake]
expand-star-imports = true
remove-unused-variables = true
ignore-init-module-imports = true
remove-all-unused-imports = true

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["loris"]
known_first_party = ["loris", "numpy", "pandas", "pytz"]
extra_standard_library = ["dateutil"]

[tool.black]
target-version = ["py39"]
line-length = 120
