[build-system]
build-backend = "setuptools.build_meta"
requires = ['setuptools >= 61.0', 'versioneer[toml]']

[project]
name = "loris"
description = """\
This repository provides a set of core functions for several \
Local Resource Integration Systems of ISC Konstanz e.V."""

authors = [
    {name = "ISC Konstanz e.V."}
]
maintainers = [
    {name = "Adrian Minde", email = "adrian.minde@isc-konstanz.de"}
]

urls.author = "https://isc-konstanz.de"
urls.source = "https://github.com/isc-konstanz/loris/"
urls.issues = "https://github.com/isc-konstanz/loris/issues"

classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

readme = "README.md"
requires-python = ">= 3.8"
license.file = "LICENSE"
dynamic = ["version"]

dependencies = [
    "tomli >= 1.1.0; python_version < '3.11'",
    "numpy >= 1.16",
    "pandas >= 0.23",
    "pytz >= 2019.1",
    "requests"
]

[project.optional-dependencies]
mysql = [
    "mysql-connector-python"
]
doc = [
    "graphviz",
    "sphinx",
    "sphinx-autoapi",
    "pydata-sphinx-theme",
    "myst-parser",
]
dev = [
    "loris[mysql, doc]",
    "pre-commit",
    "ruff"
]

[tool.setuptools.package-data]
loris = []

[tool.setuptools.packages.find]
namespaces = false
exclude = [
    "doc",
    "data*"
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "loris/_version.py"
versionfile_build = "loris/_version.py"
parentdir_prefix = "loris-"
tag_prefix = "v"

[project.scripts]
loris = "loris.__main__:main"

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py38"
exclude = ["loris/_version.py"]

[tool.ruff.lint]
select = [
    # "D",  # pydocstyle
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E", "I"]

[tool.ruff.lint.isort]
extra-standard-library = ["dateutil"]
known-first-party = ["loris", "numpy", "pandas", "pytz"]
